# ima-search-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: windows_bootstrap.ps1
src/ima_research_bot/: budget.py  cli.py  config.py  extractors.py  ima_human.py  notifiers.py  pipeline.py  radar.py  recency.py  state.py  storage.py  summarizer.py  sync.py  tts.py
src/ima_research_bot/connectors/: __init__.py  alist.py  ima_tencent.py  local_folder.py  r2.py
systemd/: ima-human-downloader.service  ima-research-bot.service  ima-research-radar.service  ima-research-radar.timer  ima-sync-r2.service  ima-sync-r2.timer
tests/: test_ima_human.py  test_local_folder.py  test_r2_architecture.py
